modify menu and herf

--- a/html/login.html
+++ b/html/login.html
@@ -31,6 +31,8 @@
                 <li><a href="#">特色</a></li>
                 <li><a href="#">主廚</a></li>
                 <li><a href="#">地圖</a></li>
+                <li><a href="./cart.html">購物</a></li>
+                <li><a href="./login.html">登入</a></li>
             </ul>
         </div>
         <div class="main">
@@ -42,6 +44,8 @@
                     <li><a href="#">特色</a></li>
                     <li><a href="#">主廚</a></li>
                     <li><a href="#">地圖</a></li>
+                    <li><a href="./cart.html">購物</a></li>
+                    <li><a href="./login.html">登入</a></li>
                 </ul>
                 <a href="bars.menu" class="showbar"></a>
             </div>
