--- a/html/Home ver.2.html
+++ b/html/Home ver.2.html
@@ -34,6 +34,8 @@
                 <li><a href="#">特色</a></li>
                 <li><a href="#">主廚</a></li>
                 <li><a href="#">地圖</a></li>
+                <li><a href="./cart.html">購物</a></li>
+                <li><a href="./login.html">登入</a></li>
             </ul>
         </div>
         <div class="main">
@@ -45,6 +47,8 @@
                     <li><a href="#">特色</a></li>
                     <li><a href="#">主廚</a></li>
                     <li><a href="#">地圖</a></li>
+                    <li><a href="./cart.html">購物</a></li>
+                    <li><a href="./login.html">登入</a></li>
                 </ul>
                 <a href="bars.menu" class="showbar"></a>
 
