--- a/html/index.html
+++ b/html/index.html
@@ -31,9 +31,9 @@
     <div class="wrap">
         <div class="aside">
             <ul class="menu">
-                <li><a href="#">特色</a></li>
-                <li><a href="#">主廚</a></li>
-                <li><a href="#">地圖</a></li>
+                <li><a href="./index.html">特色</a></li>
+                <li><a href="./index.html">主廚</a></li>
+                <li><a href="./index.html">地圖</a></li>
                 <li><a href="./cart.html">購物</a></li>
                 <li><a href="./login.html">登入</a></li>
             </ul>
@@ -44,9 +44,9 @@
                     <a href="#">六角西餐廳</a>
                 </div>
                 <ul class="menu">
-                    <li><a href="#">特色</a></li>
-                    <li><a href="#">主廚</a></li>
-                    <li><a href="#">地圖</a></li>
+                    <li><a href="./index.html">特色</a></li>
+                    <li><a href="./index.html">主廚</a></li>
+                    <li><a href="./index.html">地圖</a></li>
                     <li><a href="./cart.html">購物</a></li>
                     <li><a href="./login.html">登入</a></li>
                 </ul>
