--- a/html/login.html
+++ b/html/login.html
@@ -28,9 +28,9 @@
     <div class="wrap">
         <div class="aside">
             <ul class="menu">
-                <li><a href="#">特色</a></li>
-                <li><a href="#">主廚</a></li>
-                <li><a href="#">地圖</a></li>
+                <li><a href="./index.html">特色</a></li>
+                <li><a href="./index.html">主廚</a></li>
+                <li><a href="./index.html">地圖</a></li>
                 <li><a href="./cart.html">購物</a></li>
                 <li><a href="./login.html">登入</a></li>
             </ul>
@@ -41,9 +41,9 @@
                     <a href="#">六角西餐廳</a>
                 </div>
                 <ul class="menu">
-                    <li><a href="#">特色</a></li>
-                    <li><a href="#">主廚</a></li>
-                    <li><a href="#">地圖</a></li>
+                    <li><a href="./index.html">特色</a></li>
+                    <li><a href="./index.html">主廚</a></li>
+                    <li><a href="./index.html">地圖</a></li>
                     <li><a href="./cart.html">購物</a></li>
                     <li><a href="./login.html">登入</a></li>
                 </ul>
