--- a/html/index.html
+++ b/html/index.html
@@ -31,9 +31,9 @@
     <div class="wrap">
         <div class="aside">
             <ul class="menu">
-                <li><a href="./index.html">特色</a></li>
-                <li><a href="./index.html">主廚</a></li>
-                <li><a href="./index.html">地圖</a></li>
+                <li><a href="#feature">特色</a></li>
+                <li><a href="#todaychef">主廚</a></li>
+                <li><a href="#reservation">地圖</a></li>
                 <li><a href="./cart.html">購物</a></li>
                 <li><a href="./login.html">登入</a></li>
             </ul>
@@ -44,9 +44,9 @@
                     <a href="#">六角西餐廳</a>
                 </div>
                 <ul class="menu">
-                    <li><a href="./index.html">特色</a></li>
-                    <li><a href="./index.html">主廚</a></li>
-                    <li><a href="./index.html">地圖</a></li>
+                    <li><a href="#feature">特色</a></li>
+                    <li><a href="#todaychef">主廚</a></li>
+                    <li><a href="#reservation">地圖</a></li>
                     <li><a href="./cart.html">購物</a></li>
                     <li><a href="./login.html">登入</a></li>
                 </ul>
@@ -66,7 +66,7 @@
 
 
             <div class="content">
-                <div class="feature" >
+                <div class="feature" id="feature">
                     <h3>客人總是在詢問<br>這麼好吃的秘訣是什麼</h3>
                     <span></span>
                     <ul class="feature-list">
@@ -96,7 +96,7 @@
                     </ul>
                 </div>
 
-                <div class="todayChef">
+                <div class="todayChef" id="todayChef">
                     <img src="https://github.com/hexschool/course-css-weblayout/blob/main/assets/main_chef_brown.png?raw=true" alt="今日主廚照片">
                     <div class="intro">
                         <h6>今日主廚：帕金森、梅在帕</h6>
@@ -145,7 +145,7 @@
                     </ul>
                 </div>
 
-                <div class="reservation">
+                <div class="reservation" id="reservation">
                     <h2>我們的位置不太夠坐<br>要不要先定位呢？</h2>
                     <div class="infro">
                         <img src="https://github.com/hexschool/course-css-weblayout/blob/main/assets/Map.png?raw=true" alt="地圖">
