--- a/html/index.html
+++ b/html/index.html
@@ -32,7 +32,7 @@
         <div class="aside">
             <ul class="menu">
                 <li><a href="#feature">特色</a></li>
-                <li><a href="#todaychef">主廚</a></li>
+                <li><a href="#todayChef">主廚</a></li>
                 <li><a href="#reservation">地圖</a></li>
                 <li><a href="./cart.html">購物</a></li>
                 <li><a href="./login.html">登入</a></li>
@@ -45,7 +45,7 @@
                 </div>
                 <ul class="menu">
                     <li><a href="#feature">特色</a></li>
-                    <li><a href="#todaychef">主廚</a></li>
+                    <li><a href="#todayChef">主廚</a></li>
                     <li><a href="#reservation">地圖</a></li>
                     <li><a href="./cart.html">購物</a></li>
                     <li><a href="./login.html">登入</a></li>
